--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,12 @@
   <meta charset="utf-8">
   <title>Angular2 Firebase Authentication Demo</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
 </head>
-
 <body>
   <app-root>Loading...</app-root>
 </body>
-
 </html>
